--- a/greenpepper-confluence/pom.xml
+++ b/greenpepper-confluence/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>greenpepper-base</artifactId>
 		<groupId>greenpepper</groupId>
-		<version>4.0-beta1</version>
+		<version>4.0-beta2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>greenpepper-confluence</artifactId>
