--- a/greenpepper/pom.xml
+++ b/greenpepper/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>greenpepper-base</artifactId>
 		<groupId>greenpepper</groupId>
-		<version>4.0-beta1</version>
+		<version>4.0-beta2-SNAPSHOT</version>
 	</parent>
 
 	<!-- - Basic Project Information -->
