--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <!-- - Basic Project Information -->
     <groupId>com.github.strator-dev.greenpepper</groupId>
     <artifactId>greenpepper-open</artifactId>
     <packaging>pom</packaging>
     <name>GreenPepper Open</name>
-    <version>4.0-beta3-SNAPSHOT</version>
+    <version>4.0-RC1</version>
     <description>
         It was called GreenPepper Open by the creator of GreenPepper when the product was commercial.
         This project hosted every thing that was OpenSourced and that was a contribution of the community.
@@ -104,7 +103,7 @@
         <connection>https://github.com/strator-dev/greenpepper-open.git</connection>
         <developerConnection>scm:git:https://github.com/strator-dev/greenpepper-open.git</developerConnection>
         <url>https://github.com/strator-dev/greenpepper-open.git</url>
-        <tag>HEAD</tag>
+        <tag>v4.0-RC1</tag>
     </scm>
     <issueManagement>
         <system>Github</system>
