--- a/confluence/pom.xml
+++ b/confluence/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>greenpepper-open</artifactId>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
-		<version>4.0-RC1</version>
+		<version>4.0-RC2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>greenpepper-confluence</artifactId>
