--- a/extensions-external/db/pom.xml
+++ b/extensions-external/db/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>com.github.strator-dev.greenpepper</groupId>
 		<artifactId>greenpepper-extensions-parent</artifactId>
-		<version>4.0</version>
+		<version>4.1-SNAPSHOT</version>
 	</parent>
 
 	<properties>
