--- a/greenpepper-maven-runner/src/test/resources/IntTests/test-issue24/pom.xml
+++ b/greenpepper-maven-runner/src/test/resources/IntTests/test-issue24/pom.xml
@@ -11,7 +11,7 @@
             <plugin>
                 <groupId>com.github.strator-dev.greenpepper</groupId>
                 <artifactId>greenpepper-maven-plugin</artifactId>
-                <version>${project.version}</version>
+                <version>${greenpepper.core.version}</version>
                 <configuration>
                     <locale>en</locale>
                     <debug>true</debug>
