--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>com.github.strator-dev.greenpepper</groupId>
         <artifactId>greenpepper-open</artifactId>
-        <version>4.0.1-SNAPSHOT</version>
+        <version>4.0.1</version>
     </parent>
 
     <build>
